# govn_engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  log.txt  notes.md  run
.cache/clangd/index/: main.cpp.08DAFC889E61CB26.idx  tve_app.cpp.6CBFA8000321A297.idx  tve_app.hpp.08799F9F29DC178E.idx  tve_engine_device.cpp.133EC236B855E4AC.idx  tve_engine_device.hpp.9F50DA8ED0D6F848.idx  tve_engine_swap_chain.cpp.6D5838FDBDDF469A.idx  tve_engine_swap_chain.hpp.643031B1CBB7C93D.idx  tve_model.cpp.3E751B80DB869C74.idx  tve_model.hpp.CECBAD38CBEB95FF.idx  tve_pipeline.cpp.BA89D957B0E2D6C7.idx  tve_pipeline.hpp.C03A5A012DFC7A2A.idx  tve_window.cpp.14DD24C329FEB9AD.idx  tve_window.hpp.49FDA3D94FE6F849.idx
include/: app.hpp  tve_app.hpp  tve_engine_device.hpp  tve_engine_swap_chain.hpp  tve_game_object.hpp  tve_log.hpp  tve_model.hpp  tve_pipeline.hpp  tve_window.hpp  window.hpp
shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert
src/: app.cpp  main.cpp  tve_app.cpp  tve_engine_device.cpp  tve_engine_swap_chain.cpp  tve_log.cpp  tve_model.cpp  tve_pipeline.cpp  tve_window.cpp  window.cpp
